# ginger

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  Makefile  README.markdown  README.md  featuretest.sh  ginger.cabal  stack-11.yaml  stack-9.yaml  stack-ghc-7.10.3.yaml  stack-ghc-7.8.4.yaml  stack.yaml
cli/: GingerCLI.hs  Options.hs
doc/: getting-started.markdown  intro.markdown  toc.yml
doc/syntax/: expressions.markdown  filters.markdown  script.markdown  statements.markdown  variables.markdown
src/Text/: Ginger.hs  PrintfA.hs
src/Text/Ginger/: AST.hs  Buildable.hs  ErrInfo.hs  GVal.hs  Html.hs  Optimizer.hs  Parse.hs  Run.hs  Value.hs
src/Text/Ginger/Compile/: JS.hs
src/Text/Ginger/Compile/JS/: prelude.js
src/Text/Ginger/Optimizer/: ConstraintAnalyzer.hs
src/Text/Ginger/Run/: Builtins.hs  FuncUtils.hs  Type.hs  VM.hs
src/Text/Ginger/Value/: JSON.hs  Text.hs
templates/: data.json  features-included.html  features-included2.html  features-included3.html  features.html  header.html  include.html  inherit-child.html  inherit-parent.html  simple.html  test.html
test/: Spec.hs
test/Text/Ginger/: PropertyTests.hs  SimulationTests.hs
test/fixtures/: silly-locale.json
tests/: SmokeTest.hs
